# aggsoft_ais_decoder

./: .gitignore  LICENSE  README.md  generate_test_messages.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/aggsoft_ais_decoder/: __init__.py  client.py  constants.py  exceptions.py  models.py  parser.py
tests/: conftest.py  fixtures.py  test_all_message_types.py  test_boundary_values.py  test_client.py  test_integration_and_performance.py  test_integration_edge_cases.py  test_integration_real_ais.py  test_multipart_nmea.py  test_parser.py  test_special_messages.py  test_validation_and_errors.py
