[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aggsoft-ais-decoder"
version = "1.0.0"
description = "Python wrapper for decoding AIS messages via aggsoft.com (unofficial)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "KikiManjaro" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pyais>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/KikiManjaro/aggsoft-ais-decoder"
Repository = "https://github.com/KikiManjaro/aggsoft-ais-decoder"
Issues = "https://github.com/KikiManjaro/aggsoft-ais-decoder/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aggsoft_ais_decoder"]